log.txt
-----> Building on the Heroku-22 stack
-----> Using buildpack: heroku/python
-----> Python app detected
-----> No Python version was specified. Using the same version as the last build: python-3.11.4
       To use a different version, see: https://devcenter.heroku.com/articles/python-runtimes
-----> No change in requirements detected, installing from cache
-----> Using cached install of python-3.11.4
-----> Installing pip 23.2.1, setuptools 68.0.0 and wheel 0.41.0
-----> Installing SQLite3
-----> Installing requirements with pip
-----> $ python manage.py collectstatic --noinput
       Traceback (most recent call last):
         File "/tmp/build_d1323fdd/manage.py", line 22, in <module>
           main()
         File "/tmp/build_d1323fdd/manage.py", line 18, in main
           execute_from_command_line(sys.argv)
         File "/app/.heroku/python/lib/python3.11/site-packages/django/core/management/__init__.py", line 419, in execute_from_command_line
           utility.execute()
         File "/app/.heroku/python/lib/python3.11/site-packages/django/core/management/__init__.py", line 363, in execute
           settings.INSTALLED_APPS
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 82, in __getattr__
           self._setup(name)
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 69, in _setup
           self._wrapped = Settings(settings_module)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 170, in __init__
           mod = importlib.import_module(self.SETTINGS_MODULE)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
         File "/app/.heroku/python/lib/python3.11/importlib/__init__.py", line 126, in import_module
           return _bootstrap._gcd_import(name[level:], package, level)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
         File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
         File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
         File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
         File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
         File "<frozen importlib._bootstrap_external>", line 936, in exec_module
         File "<frozen importlib._bootstrap_external>", line 1074, in get_code
         File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
         File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
         File "/tmp/build_d1323fdd/ediary/settings.py", line 30
           DEBUG = DEBUG' in os.environ
                        ^
       SyntaxError: unterminated string literal (detected at line 30)
 !     Error while running '$ python manage.py collectstatic --noinput'.
       See traceback above for details.
       You may need to update application code to resolve this error.
       Or, you can disable collectstatic for this application:
          $ heroku config:set DISABLE_COLLECTSTATIC=1
       https://devcenter.heroku.com/articles/django-assets
 !     Push rejected, failed to compile Python app.
 !     Push failed-----> Building on the Heroku-22 stack
-----> Using buildpack: heroku/python
-----> Python app detected
-----> No Python version was specified. Using the same version as the last build: python-3.11.4
       To use a different version, see: https://devcenter.heroku.com/articles/python-runtimes
-----> No change in requirements detected, installing from cache
-----> Using cached install of python-3.11.4
-----> Installing pip 23.2.1, setuptools 68.0.0 and wheel 0.41.0
-----> Installing SQLite3
-----> Installing requirements with pip
-----> $ python manage.py collectstatic --noinput
       Traceback (most recent call last):
         File "/tmp/build_d1323fdd/manage.py", line 22, in <module>
           main()
         File "/tmp/build_d1323fdd/manage.py", line 18, in main
           execute_from_command_line(sys.argv)
         File "/app/.heroku/python/lib/python3.11/site-packages/django/core/management/__init__.py", line 419, in execute_from_command_line
           utility.execute()
         File "/app/.heroku/python/lib/python3.11/site-packages/django/core/management/__init__.py", line 363, in execute
           settings.INSTALLED_APPS
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 82, in __getattr__
           self._setup(name)
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 69, in _setup
           self._wrapped = Settings(settings_module)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
         File "/app/.heroku/python/lib/python3.11/site-packages/django/conf/__init__.py", line 170, in __init__
           mod = importlib.import_module(self.SETTINGS_MODULE)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
         File "/app/.heroku/python/lib/python3.11/importlib/__init__.py", line 126, in import_module
           return _bootstrap._gcd_import(name[level:], package, level)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
         File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
         File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
         File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
         File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
         File "<frozen importlib._bootstrap_external>", line 936, in exec_module
         File "<frozen importlib._bootstrap_external>", line 1074, in get_code
         File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
         File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
         File "/tmp/build_d1323fdd/ediary/settings.py", line 30
           DEBUG = DEBUG' in os.environ
                        ^
       SyntaxError: unterminated string literal (detected at line 30)
 !     Error while running '$ python manage.py collectstatic --noinput'.
       See traceback above for details.
       You may need to update application code to resolve this error.
       Or, you can disable collectstatic for this application:
          $ heroku config:set DISABLE_COLLECTSTATIC=1
       https://devcenter.heroku.com/articles/django-assets
 !     Push rejected, failed to compile Python app.
 !     Push failed